maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:3: error: not found: value estSurbiscuit
    while (!estSurbiscuit){
            ^