maze.randommouse.RandomMouseMaze.scala.code
override def run() {
    while (!estSurbiscuit){
      var a = random3()
      a match {
        case 0 if (!estFaceMur) => avance()
        case 1 => droite()
        case _ => gauche()
      }
    }
  prendBiscuit()
}